fix(test): DensukeWriteServiceTest を MockedStatic<JstDateTimeUtil> で固定化
レビュー Round 1 WARNING の対応:
- testWriteToDensuke_noDirtyParticipants_skipsWrite / testWriteToDensuke_byeOnlyDirty_skipsWrite は
  セットアップ時とサービス実行時の両方で JstDateTimeUtil.today() を呼ぶため、
  両者の間で JST の月が変わると失敗する可能性があった（月末・年末境界フレーク）。
- MockedStatic<JstDateTimeUtil> + CALLS_REAL_METHODS で today() を fixed=2026-05-24 に固定し、
  now() など他メソッドは実呼び出しのまま維持。これでテストの決定性を確保。
- WaitlistPromotionServiceTest は既存で MockedStatic を使用しており、同パターンに揃えた。

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>