@@ -8,6 +8,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
+import org.mockito.MockedStatic;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -90,40 +91,44 @@ class DensukeWriteServiceTest {
     @Test
     @DisplayName("dirty=trueの参加者がいない場合は何も書き込まない")
     void testWriteToDensuke_noDirtyParticipants_skipsWrite() {
-        // 実装は writeToDensuke() で今月と来月のURLを取得するため、
-        // 現在の年月を基準にテストデータを構築する
-        LocalDate today = JstDateTimeUtil.today();
-        int currentYear = today.getYear();
-        int currentMonth = today.getMonthValue();
+        // 実装は writeToDensuke() で today() を呼んで今月と来月のURLを取得するため、
+        // テストセットアップとサービス呼び出しの間で月またぎが起きないよう today() を固定する
+        LocalDate fixedToday = LocalDate.of(2026, 5, 24);
+        int currentYear = fixedToday.getYear();
+        int currentMonth = fixedToday.getMonthValue();
 
-        DensukeUrl url = DensukeUrl.builder()
-                .id(1L).year(currentYear).month(currentMonth).organizationId(1L)
-                .url("https://densuke.biz/list?cd=test123").build();
-        when(densukeUrlRepository.findByYearAndMonth(anyInt(), anyInt()))
-                .thenAnswer(inv -> {
-                    int y = (int) inv.getArgument(0);
-                    int m = (int) inv.getArgument(1);
-                    if (y == currentYear && m == currentMonth) return List.of(url);
-                    return List.of();
-                });
+        try (MockedStatic<JstDateTimeUtil> jstMock = mockStatic(JstDateTimeUtil.class, CALLS_REAL_METHODS)) {
+            jstMock.when(JstDateTimeUtil::today).thenReturn(fixedToday);
 
-        PracticeSession session = PracticeSession.builder()
-                .id(10L).sessionDate(today.withDayOfMonth(1)).totalMatches(3).build();
-        when(practiceSessionRepository.findByYearAndMonthAndOrganizationId(anyInt(), anyInt(), eq(1L)))
-                .thenAnswer(inv -> {
-                    int y = (int) inv.getArgument(0);
-                    int m = (int) inv.getArgument(1);
-                    if (y == currentYear && m == currentMonth) return List.of(session);
-                    return Collections.emptyList();
-                });
+            DensukeUrl url = DensukeUrl.builder()
+                    .id(1L).year(currentYear).month(currentMonth).organizationId(1L)
+                    .url("https://densuke.biz/list?cd=test123").build();
+            when(densukeUrlRepository.findByYearAndMonth(anyInt(), anyInt()))
+                    .thenAnswer(inv -> {
+                        int y = (int) inv.getArgument(0);
+                        int m = (int) inv.getArgument(1);
+                        if (y == currentYear && m == currentMonth) return List.of(url);
+                        return List.of();
+                    });
 
-        when(practiceParticipantRepository.findDirtyForDensukeSync(any()))
-                .thenReturn(Collections.emptyList());
+            PracticeSession session = PracticeSession.builder()
+                    .id(10L).sessionDate(fixedToday.withDayOfMonth(1)).totalMatches(3).build();
+            when(practiceSessionRepository.findByYearAndMonthAndOrganizationId(anyInt(), anyInt(), eq(1L)))
+                    .thenAnswer(inv -> {
+                        int y = (int) inv.getArgument(0);
+                        int m = (int) inv.getArgument(1);
+                        if (y == currentYear && m == currentMonth) return List.of(session);
+                        return Collections.emptyList();
+                    });
 
-        densukeWriteService.writeToDensuke();
+            when(practiceParticipantRepository.findDirtyForDensukeSync(any()))
+                    .thenReturn(Collections.emptyList());
 
-        verify(densukeMemberMappingRepository, never()).findByDensukeUrlIdAndPlayerId(any(), any());
-        assertThat(densukeWriteService.getStatus(1L).getPendingCount()).isEqualTo(0);
+            densukeWriteService.writeToDensuke();
+
+            verify(densukeMemberMappingRepository, never()).findByDensukeUrlIdAndPlayerId(any(), any());
+            assertThat(densukeWriteService.getStatus(1L).getPendingCount()).isEqualTo(0);
+        }
     }
 
     @Test
@@ -172,42 +177,46 @@ class DensukeWriteServiceTest {
     @Test
     @DisplayName("BYE(matchNumber=null)のみdirtyの場合はプレイヤーの書き込みが発生しない")
     void testWriteToDensuke_byeOnlyDirty_skipsWrite() {
-        // 実装は writeToDensuke() で今月と来月のURLを取得するため、
-        // 現在の年月を基準にテストデータを構築する
-        LocalDate today = JstDateTimeUtil.today();
-        int currentYear = today.getYear();
-        int currentMonth = today.getMonthValue();
+        // 実装は writeToDensuke() で today() を呼んで今月と来月のURLを取得するため、
+        // テストセットアップとサービス呼び出しの間で月またぎが起きないよう today() を固定する
+        LocalDate fixedToday = LocalDate.of(2026, 5, 24);
+        int currentYear = fixedToday.getYear();
+        int currentMonth = fixedToday.getMonthValue();
 
-        DensukeUrl url = DensukeUrl.builder()
-                .id(1L).year(currentYear).month(currentMonth).organizationId(1L)
-                .url("https://densuke.biz/list?cd=test123").build();
-        when(densukeUrlRepository.findByYearAndMonth(anyInt(), anyInt()))
-                .thenAnswer(inv -> {
-                    int y = (int) inv.getArgument(0);
-                    int m = (int) inv.getArgument(1);
-                    if (y == currentYear && m == currentMonth) return List.of(url);
-                    return List.of();
-                });
+        try (MockedStatic<JstDateTimeUtil> jstMock = mockStatic(JstDateTimeUtil.class, CALLS_REAL_METHODS)) {
+            jstMock.when(JstDateTimeUtil::today).thenReturn(fixedToday);
 
-        PracticeSession session = PracticeSession.builder()
-                .id(10L).sessionDate(today.withDayOfMonth(1)).totalMatches(3).build();
-        when(practiceSessionRepository.findByYearAndMonthAndOrganizationId(anyInt(), anyInt(), eq(1L)))
-                .thenAnswer(inv -> {
-                    int y = (int) inv.getArgument(0);
-                    int m = (int) inv.getArgument(1);
-                    if (y == currentYear && m == currentMonth) return List.of(session);
-                    return Collections.emptyList();
-                });
+            DensukeUrl url = DensukeUrl.builder()
+                    .id(1L).year(currentYear).month(currentMonth).organizationId(1L)
+                    .url("https://densuke.biz/list?cd=test123").build();
+            when(densukeUrlRepository.findByYearAndMonth(anyInt(), anyInt()))
+                    .thenAnswer(inv -> {
+                        int y = (int) inv.getArgument(0);
+                        int m = (int) inv.getArgument(1);
+                        if (y == currentYear && m == currentMonth) return List.of(url);
+                        return List.of();
+                    });
 
-        // findDirtyForDensukeSync は matchNumber IS NOT NULL なのでBYEを返さない → 空
-        when(practiceParticipantRepository.findDirtyForDensukeSync(any()))
-                .thenReturn(Collections.emptyList());
+            PracticeSession session = PracticeSession.builder()
+                    .id(10L).sessionDate(fixedToday.withDayOfMonth(1)).totalMatches(3).build();
+            when(practiceSessionRepository.findByYearAndMonthAndOrganizationId(anyInt(), anyInt(), eq(1L)))
+                    .thenAnswer(inv -> {
+                        int y = (int) inv.getArgument(0);
+                        int m = (int) inv.getArgument(1);
+                        if (y == currentYear && m == currentMonth) return List.of(session);
+                        return Collections.emptyList();
+                    });
 
-        densukeWriteService.writeToDensuke();
+            // findDirtyForDensukeSync は matchNumber IS NOT NULL なのでBYEを返さない → 空
+            when(practiceParticipantRepository.findDirtyForDensukeSync(any()))
+                    .thenReturn(Collections.emptyList());
 
-        // BYEのみdirtyの場合、書き込み処理に進まない
-        verify(densukeMemberMappingRepository, never()).findByDensukeUrlIdAndPlayerId(any(), any());
-        assertThat(densukeWriteService.getStatus(1L).getPendingCount()).isEqualTo(0);
+            densukeWriteService.writeToDensuke();
+
+            // BYEのみdirtyの場合、書き込み処理に進まない
+            verify(densukeMemberMappingRepository, never()).findByDensukeUrlIdAndPlayerId(any(), any());
+            assertThat(densukeWriteService.getStatus(1L).getPendingCount()).isEqualTo(0);
+        }
     }
 
     // ----------------------------------------------------------------
